Relocate custom settings to usr dir

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ classifiers = [
 dependencies = [
   "Kivy>=2.1.0,<3.0",
   "numpy>=1.22.4,<2.0",
+  "tomlkit>=0.11.4",
 ]
 
 [project.optional-dependencies]
@@ -39,6 +40,7 @@ include = [
 
 [tool.setuptools.package-data]
 botroyale = [
+  "default_settings.toml",
   "assets/**",
   "logic/maps/*.json",
 ]
