--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,10 +36,12 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
-  "pdoc3==0.10.0",
+  "pytest==7.1.3",
+  "hypothesis==6.54.5",
   "black==22.6.0",
   "flake8==5.0.4",
   "flake8-docstrings==1.6.0",
+  "pdoc3==0.10.0",
 ]
 
 [tool.setuptools.packages.find]
@@ -57,12 +59,7 @@ botroyale = [
 ]
 
 [project.scripts]
-botroyale = "botroyale.run.gui:run"
-botroyale-gui = "botroyale.run.gui:run"
-botroyale-cli = "botroyale.run.cli:run"
-botroyale-docs = "botroyale.run.docs:run"
-botroyale-test = "botroyale.run.test:run"
-botroyale-format = "botroyale.run.format:run"
+botroyale = "botroyale.run:script_entry_point"
 
 [project.urls]
 "Documentation" = "https://ariel.ninja/botroyale/docs"
